service-mesh-with-envoy/service1/envoy-config.yaml
# Envoy sidecar take Envoy proxy request. 
# Because the Ingress and the Egress rules are added to the configuraton of Envoy proxy. 
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "127.0.0.1"
      port_value: 9901
static_resources:
  listeners:

    -
      name: "service-1-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8786
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                route_config:
                  name: "service-1-svc-http-route"
                  virtual_hosts:
                    -
                      name: "service-1-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service_1"
                http_filters:
                  -
                    name: "envoy.router"
    -
      name: "service-2-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8788
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "egress"
                codec_type: "AUTO"
                route_config:
                  name: "service-2-svc-http-route"
                  virtual_hosts:
                    -
                      name: "service-2-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service_2"
                http_filters:
                  -
                    name: "envoy.router"

    -
      name: "service-3-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8791
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "egress"
                codec_type: "AUTO"
                route_config:
                  name: "service-2-svc-http-route"
                  virtual_hosts:
                    -
                      name: "service-2-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "service_3"
                http_filters:
                  -
                    name: "envoy.router"                                
  clusters:
      -
        name: "service_1"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "service_1"
              port_value: 5001  
      -
        name: "service_2"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "service_2_envoy"
              port_value: 8789

      -
        name: "service_3"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "service_3_envoy"
              port_value: 8790
